Fix small screen layout issue in list of events

--- a/src/ludivine/assets/client.css
+++ b/src/ludivine/assets/client.css
@@ -321,6 +321,7 @@ button.highlight { animation: highlight 1s ease-in-out infinite alternate; }
     align-items: center;
 }
 .event > .text {
+    flex: 1;
     width: 200px;
     padding-left: 0.5em;
     line-height: 1.4;
